--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2"
+    },
+    "dependencies": {
+        "react-bootstrap": "^0.32.1"
     }
 }
