--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "react-dom": "^16.4.2"
     },
     "dependencies": {
+        "emotion": "^9.2.8",
         "flux": "^3.1.3",
         "npm": "^6.4.0",
-        "react-bootstrap": "^0.32.1"
+        "react-bootstrap": "^0.32.1",
+        "react-spinners": "^0.4.5"
     }
 }
